# project1

./: pyproject.toml
seqparser/: parse.py  seq.py  seqparser.py
tests/: test_parser.py  test_parsers.py  test_transcribe.py
