[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Project_1_JW"
authors = [{name = "Jacqueline Williams", email = "jacqueline.williams@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest"]

[project.urls]
Home = "https://github.com/williams-jacquelinec/project1"

[scripts]
test = "pytest >=2.7.3"
